CHANGELOG

2.0.47
UTILS:
* UTIL type=Rule | introduce 'filter=(app has.fromquery subquery1)' 'subquery=([application filters])'
* UTIL type=rule | introduce 'filter=(app risk.recursive.is 3)'
* update internal JSON files for pan-os-php API usage

BUGFIX:
* class AppRuleContainer | bugfix for method membersExpanded()

GENERAL:


2.0.46 (20220708)
UTILS:
* class DeviceOnPrem - introduction - Buckbeak - improving other Rule classes to be prepared for Snippets
* Buckbeak - different classes - improvement to support new DeviceOnPrem / Snippet feature
* UTIL type=[all-merger] - improve exportcsv export if argument projectfolder is used

BUGFIX:
* UTIL type=xml-isse | bugfix for checking 'groups with own membership as subgroup'
* Update class cidr | bugfix for Buckbeak address object variable handling
* class Container/DeviceCloud/DeviceOnPrem | bugfix add missing region XML reading

GENERAL:
* updating Docker files
* Update READMEdocker - improving workflow Container update
* class FawkesConf | introduce findDeviceOnPrem / createDeviceOnPrem
* class ManagedDeviceStore | introduce method createManagedDevice for Panorama and Fawkes


2.0.45 (20220630)
UTILS:
* UTIL type=device | actions=display show Container hierarchy for Fawkes
* UTIL type=stats | improve visibility for securityprofiles

BUGFIX:
* UTIL type=securityprofilegroup | bugfix for fawkes config

GENERAL:


2.0.44 (20220629)
UTILS:
* UTIL type=xml-issue | extend visibility for removing duplicate address/service objects
* UTIL type=device | introduce actions=manageddevice-create / manageddevice-delete
* UTIL type=device | introduce actions=DeviceGroup-removeSerial/DeviceGroup-addSerial

BUGFIX:
* UTIL type=securityprofile actions=delete - bugfix to get API mode working
* UTIL type=address-merger | bugfix if one of the object has an empty description string

GENERAL:


2.0.43 (20220622)
UTILS:
* UTIL type=rule | introduce new actions=app-postgres-fix