@@ -17,7 +17,8 @@ PH::print_stdout();
 PH::print_stdout( "PAN-OS-PHP version: ".PH::frameworkVersion() );
 
 $fullxpath = false;
-
+$xpath = null;
+$displayXMLnode = false;
 
 $supportedArguments = Array();
 $supportedArguments['in'] = Array('niceName' => 'in', 'shortHelp' => 'input file or api. ie: in=config.xml  or in=api://192.168.1.1 or in=api://0018CAEC3@panorama.company.com', 'argDesc' => '[filename]|[api://IP]|[api://serial@IP]');
@@ -26,9 +27,12 @@ $supportedArguments['debugapi'] = Array('niceName' => 'DebugAPI', 'shortHelp' =>
 $supportedArguments['help'] = Array('niceName' => 'help', 'shortHelp' => 'this message');
 $supportedArguments['nodefilter'] = Array('niceName' => 'nodefilter', 'shortHelp' => 'specify the nodefilter to get all xPath within this configuration file');
 $supportedArguments['fullxpath'] = Array('niceName' => 'fullxpath', 'shortHelp' => 'display full xpath for templates');
+$supportedArguments['xpath'] = Array('niceName' => 'xpath', 'shortHelp' => 'specify the xpath to get the value defined on this config');
+$supportedArguments['display-xmlnode'] = Array('niceName' => 'display-xmlnode', 'shortHelp' => 'display XML node configuration');
 
 $usageMsg = PH::boldText("USAGE: ")."php ".basename(__FILE__)." in=inputfile.xml ".
-    "\"xpath=/config/devices/entry[@name='localhost.localdomain']/deviceconfig/system/update-server\"\n".
+    "\"nodefilter=certificate\"\n".
+    "\"[fullxpath]\"\n".
     "php ".basename(__FILE__)." help          : more help messages\n";
 ##############
 
@@ -54,8 +58,14 @@ if( !isset( PH::$args['nodefilter'] ) )
 else
     $qualifiedNodeName = PH::$args['nodefilter'];
 
+if( isset( PH::$args['xpath'] ) )
+    $xpath = PH::$args['xpath'];
+
 if( isset( PH::$args['fullxpath'] ) )
     $fullxpath = true;
+
+if( isset( PH::$args['display-xmlnode'] ) )
+    $displayXMLnode = true;
 
 ########################################################################################################################
 
@@ -68,6 +78,9 @@ foreach( $nodeArray as $item )
 {
     $text = DH::elementToPanXPath( $item );
     $replace_template = "/config/devices/entry[@name='localhost.localdomain']/template/";
+
+    if( $xpath !== null && strpos( $text, $xpath ) === FALSE )
+        continue;
 
     if( strpos( $text, $replace_template ) !== FALSE )
     {
@@ -84,12 +97,19 @@ foreach( $nodeArray as $item )
         $text = str_replace( $replace, "", $text );
 
         $tmpArray['text'] = $text;
+        $tmpArray['node'] = $item;
 
         $templateEntryArray[ 'template'][ $templateName ][] = $tmpArray;
 
     }
     else
-        $templateEntryArray[ 'misc'][] = $text;
+    {
+        $tmpArray['text'] = $text;
+        $tmpArray['node'] = $item;
+
+        $templateEntryArray[ 'misc'][] = $tmpArray;
+    }
+
 }
 
 
@@ -101,9 +121,15 @@ foreach( $nodeArray as $item )
             PH::print_stdout( "TEMPLATE: ".$templateName );
             foreach( $templateEntry as $item )
             {
+                PH::print_stdout("---------");
                 PH::print_stdout( "  - ". $item['text'] );
                 if( $fullxpath )
                     PH::print_stdout( "     |". $item['xpath']."|" );
+
+                if( $displayXMLnode )
+                {
+                    DH::DEBUGprintDOMDocument( $item['node'] );
+                }
             }
 
         }
@@ -115,7 +141,12 @@ foreach( $nodeArray as $item )
 
         foreach( $templateEntryArray['misc'] as $miscEntry )
         {
-                PH::print_stdout( "  - ". $miscEntry );
+            PH::print_stdout("---------");
+            PH::print_stdout( "  - ". $miscEntry['text'] );
+            if( $displayXMLnode )
+            {
+                DH::DEBUGprintDOMDocument( $miscEntry['node'] );
+            }
         }
     }
 
