@@ -5,6 +5,7 @@ UTILS:
 * UTIL type=Rule | introduce 'filter=(app has.fromquery subquery1)' 'subquery=([application filters])'
 * UTIL type=rule | introduce 'filter=(app risk.recursive.is 3)'
 * update internal JSON files for pan-os-php API usage
+* multiple classes | improvements for buckbeak
 
 BUGFIX:
 * class AppRuleContainer | bugfix for method membersExpanded()
